initial gui.